Java next SDK generator (#42)
* core model builder (#27)

* core model builder

* handled null check

* handle null at list type

* added util for case conversion

* Java next post request param builder (#28)

* post request params builder

* corrected file name

* added helper methods to ensure separation of concerns

* null handler

* Get params builder with hbs (#30)

* Get response builder (#33)

* Get response builder

* Code cleanup

* debup import correction

* Post API response builder (#34)

* service registry builder (#35)

* Post API request with params

* composite request param

* make list api request nullable

* composite array index format update

* remove auto-paginate feature

* update root package

* updated package with version

* helper methods in response object

* add json serializer, batch api support

* Java next test case model builder (#39)

* model builder testcases

* core model builder

* Java next test case get request builder (#40)

* model builder testcases

* core model builder

* get request params builder testcase

* Bigdecimal and deprecated mapper

* batch name duplicate issue fix

* handle jsonArray param, sort attribute correction

* custom field support

* custom fields at endpoint level, test coverage, base reponse

* Enum case maintainance

* Enum case conversion

* Enum namespace update and entitlement override list (#45)

* update array of string method change

* fix potential null