@@ -22,6 +22,8 @@ dependencies {
     implementation 'info.picocli:picocli:4.7.4'
     implementation 'com.google.guava:guava:32.0.1-jre'
     implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
+    implementation 'org.atteo:evo-inflector:1.3'
+    implementation 'com.google.googlejavaformat:google-java-format:1.22.0'
 
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
@@ -32,6 +34,18 @@ dependencies {
 
 application {
     mainClass = "com.chargebee.Main"
+    applicationDefaultJvmArgs = [
+        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+    ]
 }
 
 test {
